# homestead

./: .env.example  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh  test-commit-a.txt  test-commit-b.txt
.github/workflows/: ci.yml
docker/: almanac.Dockerfile  herald.Dockerfile  manor-api.Dockerfile  manor-ui.Dockerfile
docs/: DOCUMENTATION_REORGANIZATION_PLAN.md  START_HERE.md  architecture.md  governance-priorities.md
docs/dev-guide/: architecture.md  setup.md
docs/reference/: api-reference.md  common-package.md  herald-package.md  steward-package.md
docs/research/: claude-dir-investigation.md  haiku-optimization-opportunities.md
docs/roadmaps/: backup-and-migration-strategy.md  memory-roadmap.md
docs/user-guide/: getting-started.md
lore/: claude.md.example  soul.md.example  triggers.md.example  user.md  user.md.example
lore/base/: agents.md  architecture.md  claude.md  identity.md  soul.md  triggers.md  user.md
lore/templates/: agents.md  architecture.md  claude.md  identity.md  soul.md  triggers.md  user.md
manor/: .env.example  README.md  mcp-config.json.example  next.config.ts  package.json  qa-manor.mjs  tsconfig.tsbuildinfo
manor/api/: .env.example  config.py  main.py  memory.py  prompt.py  requirements.txt
scripts/: hctl  herald-watchdog.sh  seed-data.sh
tests/: conftest.py  test_db.py  test_events.py  test_herald.py  test_memory.py  test_models.py  test_outbox.py  test_proposals.py  test_skills.py  test_watchtower.py  test_worktree_e2e.txt
(+51 files in other folders)
