[project]
name = "homestead"
version = "0.1.0"
description = "Personal AI infrastructure framework"
requires-python = ">=3.11"
license = "MIT"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
